manifests/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-admin-controller
  namespace: kong
  annotations:
    konghq.com/methods: GET,POST,PUT,DELETE
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: kong
  rules:
    - host: admin-kong.khoaluantotnghiep.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-kong-admin
                port:
                  number: 8001
    - host: manager-kong.khoaluantotnghiep.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-kong-manager
                port:
                  number: 8002
